@@ -1,5 +1,7 @@
 package com.example.vp.consultancy.service.impl;
 
+import com.example.vp.consultancy.dto.AddScheduleGapRequest;
+import com.example.vp.consultancy.dto.AddScheduleGapResponse;
 import com.example.vp.consultancy.dto.FarmerScheduleResponse;
 import com.example.vp.consultancy.dto.GetNextSchedulePreviewRequest;
 import com.example.vp.consultancy.dto.GetNextSchedulePreviewResponse;
@@ -12,6 +14,7 @@ import com.example.vp.consultancy.dto.SendScheduleTaskRequest;
 import com.example.vp.consultancy.entity.FarmerCropVariety;
 import com.example.vp.consultancy.entity.FarmerCropVarietySchedule;
 import com.example.vp.consultancy.entity.FarmerScheduleDay;
+import com.example.vp.consultancy.entity.FarmerScheduleGap;
 import com.example.vp.consultancy.entity.FarmerScheduleTask;
 import com.example.vp.consultancy.entity.MasterScheduleDay;
 import com.example.vp.consultancy.entity.MasterScheduleTask;
@@ -21,22 +24,26 @@ import com.example.vp.consultancy.exception.ResourceNotFoundException;
 import com.example.vp.consultancy.exception.VPException;
 import com.example.vp.consultancy.repository.FarmerCropVarietyRepository;
 import com.example.vp.consultancy.repository.FarmerCropVarietyScheduleRepository;
+import com.example.vp.consultancy.repository.FarmerScheduleGapRepository;
 import com.example.vp.consultancy.repository.MasterScheduleDayRepository;
 import com.example.vp.consultancy.repository.MasterScheduleTemplateRepository;
 import com.example.vp.consultancy.repository.UserProfileRepository;
 import com.example.vp.consultancy.service.SendScheduleService;
 import lombok.RequiredArgsConstructor;
-import org.apache.logging.log4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
-import org.springframework.security.core.context.SecurityContextHolder;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -49,9 +56,14 @@ public class SendScheduleServiceImpl implements SendScheduleService {
     private final MasterScheduleTemplateRepository masterScheduleTemplateRepository;
     private final MasterScheduleDayRepository masterScheduleDayRepository;
     private final FarmerCropVarietyScheduleRepository farmerCropVarietyScheduleRepository;
+    private final FarmerScheduleGapRepository farmerScheduleGapRepository;
 
     @Override
     @Transactional(readOnly = true)
+    @Cacheable(
+            cacheNames = "schedulePreview",
+            key = "#request.farmerId + ':' + #request.farmerCropVarietyId + ':' + #request.masterScheduleTemplateId + ':' + #request.numberOfDays"
+    )
     public GetNextSchedulePreviewResponse getNextSchedulePreview(GetNextSchedulePreviewRequest request) {
         logger.info("Fetching next schedule preview for Farmer ID: {}, FarmerCropVariety ID: {}, MasterScheduleTemplate ID: {}, Number of Days: {}",
                 request.getFarmerId(), request.getFarmerCropVarietyId(), request.getMasterScheduleTemplateId(), request.getNumberOfDays());
@@ -70,22 +82,24 @@ public class SendScheduleServiceImpl implements SendScheduleService {
             throw new VPException("Selected master schedule template does not belong to the farmer crop variety", 400);
         }
 
-        Long lastSentDay = farmerCropVarietyScheduleRepository
-                .findTopByFarmerIdAndFarmerCropVarietyIdOrderByIdDesc(request.getFarmerId(), request.getFarmerCropVarietyId())
-                .map(FarmerCropVarietySchedule::getLastSentDay)
-                .orElse(0L);
+        Optional<FarmerCropVarietySchedule> latestSchedule = getLatestSchedule(request.getFarmerId(), request.getFarmerCropVarietyId());
+        long lastSentMasterDay = latestSchedule.map(this::resolveLastSentMasterDay).orElse(0L);
+        long totalGapDays = getTotalGapDays(request.getFarmerId(), request.getFarmerCropVarietyId());
 
-        long startDay = lastSentDay + 1;
-        long endDay = lastSentDay + request.getNumberOfDays();
-        logger.info("Calculated schedule preview range: startDay = {}, endDay = {}", startDay, endDay);
+        long masterStartDay = lastSentMasterDay + 1;
+        long masterEndDay = lastSentMasterDay + request.getNumberOfDays();
+        long startDay = masterStartDay + totalGapDays;
+        long endDay = masterEndDay + totalGapDays;
+        logger.info("Calculated schedule preview range: farmerStartDay = {}, farmerEndDay = {}, masterStartDay = {}, masterEndDay = {}, totalGapDays = {}",
+                startDay, endDay, masterStartDay, masterEndDay, totalGapDays);
 
         List<MasterScheduleDay> scheduleDays = masterScheduleDayRepository
-                .findByTemplateIdAndDayNumberBetweenOrderByDayNumberAsc(request.getMasterScheduleTemplateId(), startDay, endDay);
+                .findByTemplateIdAndDayNumberBetweenOrderByDayNumberAsc(request.getMasterScheduleTemplateId(), masterStartDay, masterEndDay);
         logger.debug("Fetched {} schedule days from MasterScheduleDayRepository for template ID: {} between days {} and {}",
-                scheduleDays.size(), request.getMasterScheduleTemplateId(), startDay, endDay);
+                scheduleDays.size(), request.getMasterScheduleTemplateId(), masterStartDay, masterEndDay);
 
         List<ScheduleDayDTO> dayDTOs = scheduleDays.stream()
-                .map(this::convertMasterDayToScheduleDay)
+                .map(day -> convertMasterDayToScheduleDay(day, day.getDayNumber() + totalGapDays))
                 .collect(Collectors.toList());
         logger.debug("Converted MasterScheduleDay entities to ScheduleDayDTOs, resulting in {} DTOs", dayDTOs.size());
 
@@ -97,6 +111,8 @@ public class SendScheduleServiceImpl implements SendScheduleService {
                 .masterScheduleTemplateId(request.getMasterScheduleTemplateId())
                 .startDay(startDay)
                 .endDay(endDay)
+                .masterStartDay(masterStartDay)
+                .masterEndDay(masterEndDay)
                 .totalDays((long) dayDTOs.size())
                 .scheduleDays(dayDTOs)
                 .build();
@@ -104,6 +120,10 @@ public class SendScheduleServiceImpl implements SendScheduleService {
 
     @Override
     @Transactional
+    @Caching(evict = {
+            @CacheEvict(cacheNames = "schedulePreview", allEntries = true),
+            @CacheEvict(cacheNames = "farmerScheduleByVariety", allEntries = true)
+    })
     public SendScheduleResponse sendSchedule(SendScheduleRequest request) {
         logger.info("Sending schedule for Farmer ID: {}, FarmerCropVariety ID: {}, Number of Days: {}",
                 request.getFarmerId(), request.getFarmerCropVarietyId(), request.getNumberOfDays());
@@ -113,20 +133,31 @@ public class SendScheduleServiceImpl implements SendScheduleService {
         FarmerCropVariety farmerCropVariety = validateFarmerCropVarietyOwnership(farmer.getId(), request.getFarmerCropVarietyId());
         logger.info("Validated ownership of FarmerCropVariety ID: {} for Farmer ID: {}", request.getFarmerCropVarietyId(), request.getFarmerId());
 
+        Optional<FarmerCropVarietySchedule> latestSchedule = getLatestSchedule(request.getFarmerId(), request.getFarmerCropVarietyId());
+        long lastSentMasterDay = latestSchedule.map(this::resolveLastSentMasterDay).orElse(0L);
+        long totalGapDays = getTotalGapDays(request.getFarmerId(), request.getFarmerCropVarietyId());
+        logger.info("lastSentMasterDay ={}, totalGapDays={}, farmerId = {}",lastSentMasterDay,totalGapDays, request.getFarmerId());
+
         List<SendScheduleDayRequest> sortedDays = request.getScheduleDays().stream()
                 .sorted(Comparator.comparing(SendScheduleDayRequest::getDayNumber))
-                .collect(Collectors.toList());
+                .toList();
         logger.info("Sorted {} schedule days by day number for sending schedule", sortedDays.size());
 
-        long startDay = sortedDays.get(0).getDayNumber();
-        long endDay = sortedDays.get(sortedDays.size() - 1).getDayNumber();
-        logger.info("Calculated schedule range for sending: startDay = {}, endDay = {}", startDay, endDay);
+        long expectedStartDay = lastSentMasterDay + totalGapDays + 1;
+        validateSendScheduleRequest(request, sortedDays, expectedStartDay);
+
+        long startDay = sortedDays.getFirst().getDayNumber();
+        long endDay = sortedDays.getLast().getDayNumber();
+        long endMasterDay = lastSentMasterDay + sortedDays.size();
+        logger.info("Calculated schedule range for sending: farmerStartDay = {}, farmerEndDay = {}, masterEndDay = {}, totalGapDays = {}",
+                startDay, endDay, endMasterDay, totalGapDays);
 
         FarmerCropVarietySchedule schedule = FarmerCropVarietySchedule.builder()
                 .farmer(farmer)
                 .farmerCropVariety(farmerCropVariety)
                 .startDate(LocalDate.now())
                 .lastSentDay(endDay)
+                .lastSentMasterDay(endMasterDay)
                 .build();
 
         List<FarmerScheduleDay> farmerScheduleDays = sortedDays.stream()
@@ -152,7 +183,52 @@ public class SendScheduleServiceImpl implements SendScheduleService {
     }
 
     @Override
+    @Transactional
+    @Caching(evict = {
+            @CacheEvict(cacheNames = "schedulePreview", allEntries = true),
+            @CacheEvict(cacheNames = "farmerScheduleByVariety", allEntries = true)
+    })
+    public AddScheduleGapResponse addScheduleGap(AddScheduleGapRequest request) {
+        logger.info("Adding schedule gap for Farmer ID: {}, FarmerCropVariety ID: {}, Gap Days: {}",
+                request.getFarmerId(), request.getFarmerCropVarietyId(), request.getGapDays());
+
+        UserProfile farmer = userProfileRepository.findById(request.getFarmerId())
+                .orElseThrow(() -> new ResourceNotFoundException("Farmer not found with ID: " + request.getFarmerId()));
+        FarmerCropVariety farmerCropVariety = validateFarmerCropVarietyOwnership(farmer.getId(), request.getFarmerCropVarietyId());
+
+        FarmerCropVarietySchedule latestSchedule = getLatestSchedule(request.getFarmerId(), request.getFarmerCropVarietyId())
+                .orElseThrow(() -> new VPException("Cannot add a schedule gap before sending at least one schedule", 400));
+
+        long totalGapDaysBefore = getTotalGapDays(request.getFarmerId(), request.getFarmerCropVarietyId());
+        FarmerScheduleGap savedGap = farmerScheduleGapRepository.save(FarmerScheduleGap.builder()
+                .farmer(farmer)
+                .farmerCropVariety(farmerCropVariety)
+                .gapDays(request.getGapDays())
+                .build());
+        long totalGapDaysAfter = totalGapDaysBefore + savedGap.getGapDays();
+        long lastSentMasterDay = resolveLastSentMasterDay(latestSchedule);
+        long nextMasterDay = lastSentMasterDay + 1;
+        long nextFarmerDay = nextMasterDay + totalGapDaysAfter;
+
+        logger.info("Schedule gap added successfully for Farmer ID: {}, FarmerCropVariety ID: {}, Total Gap Days: {}, Next Farmer Day: {}, Next Master Day: {}",
+                request.getFarmerId(), request.getFarmerCropVarietyId(), totalGapDaysAfter, nextFarmerDay, nextMasterDay);
+
+        return AddScheduleGapResponse.builder()
+                .farmerId(request.getFarmerId())
+                .farmerCropVarietyId(request.getFarmerCropVarietyId())
+                .gapDays(savedGap.getGapDays())
+                .totalGapDays(totalGapDaysAfter)
+                .lastSentFarmerDay(latestSchedule.getLastSentDay())
+                .lastSentMasterDay(lastSentMasterDay)
+                .nextFarmerDay(nextFarmerDay)
+                .nextMasterDay(nextMasterDay)
+                .message("Schedule gap added successfully")
+                .build();
+    }
+
+    @Override
     @Transactional(readOnly = true)
+    @Cacheable(cacheNames = "farmerScheduleByVariety", key = "#farmer.id + ':' + #farmerCropVarietyId")
     public FarmerScheduleResponse getFarmerSchedule(UserProfile farmer, Long farmerCropVarietyId) {
         logger.info("Fetching schedule for Farmer ID: {}, FarmerCropVariety ID: {}", farmer.getId(), farmerCropVarietyId);
 
@@ -162,14 +238,21 @@ public class SendScheduleServiceImpl implements SendScheduleService {
                 .findByFarmerCropVarietyIdOrderByIdAsc(farmerCropVarietyId);
         logger.info("Fetched {} assigned schedules for FarmerCropVariety ID: {}", schedules.size(), farmerCropVarietyId);
 
-        List<ScheduleDayDTO> allScheduleDays = schedules.stream()
-                .flatMap(schedule -> {
-                    List<FarmerScheduleDay> sortedDays = schedule.getScheduleDays() == null ? List.of() : schedule.getScheduleDays().stream()
-                            .sorted(Comparator.comparing(FarmerScheduleDay::getDayNumber))
-                            .collect(Collectors.toList());
-                    return sortedDays.stream().map(this::convertFarmerDayToScheduleDay);
-                })
-                .collect(Collectors.toList());
+        List<ScheduleDayDTO> allScheduleDays = new ArrayList<>();
+        for (FarmerCropVarietySchedule schedule : schedules) {
+            List<FarmerScheduleDay> sortedDays = schedule.getScheduleDays() == null ? List.of() : schedule.getScheduleDays().stream()
+                    .sorted(Comparator.comparing(FarmerScheduleDay::getDayNumber))
+                    .collect(Collectors.toList());
+
+            if (sortedDays.isEmpty()) {
+                continue;
+            }
+
+            long batchMasterStartDay = resolveLastSentMasterDay(schedule) - sortedDays.size() + 1;
+            for (int index = 0; index < sortedDays.size(); index++) {
+                allScheduleDays.add(convertFarmerDayToScheduleDay(sortedDays.get(index), batchMasterStartDay + index));
+            }
+        }
         logger.info("Merged all schedule days into a single flat array. Total days: {}", allScheduleDays.size());
 
         String mobile = farmer.getUser() != null ? farmer.getUser().getMobile() : null;
@@ -202,15 +285,6 @@ public class SendScheduleServiceImpl implements SendScheduleService {
                 .build();
     }
 
-    private UserProfile getCurrentFarmerProfile() {
-        String mobile = SecurityContextHolder.getContext().getAuthentication().getName();
-        return userProfileRepository.findByUser_Mobile(mobile)
-                .orElseThrow(() -> {
-                    logger.warn("Farmer profile not found for authenticated user with mobile: {}", mobile);
-                    return new ResourceNotFoundException("Farmer profile not found for authenticated user");
-                });
-    }
-
     private FarmerCropVariety validateFarmerCropVarietyOwnership(Long farmerId, Long farmerCropVarietyId) {
         logger.info("Validating ownership of FarmerCropVariety with ID: {} for Farmer with ID: {}", farmerCropVarietyId, farmerId);
         FarmerCropVariety farmerCropVariety = farmerCropVarietyRepository.findById(farmerCropVarietyId)
@@ -225,7 +299,7 @@ public class SendScheduleServiceImpl implements SendScheduleService {
         return farmerCropVariety;
     }
 
-    private ScheduleDayDTO convertMasterDayToScheduleDay(MasterScheduleDay day) {
+    private ScheduleDayDTO convertMasterDayToScheduleDay(MasterScheduleDay day, Long farmerDayNumber) {
         logger.info("Converting MasterScheduleDay with ID: {} to ScheduleDayDTO", day.getId());
 
         List<ScheduleTaskDTO> taskDTOs = day.getTasks() == null ? List.of() : day.getTasks().stream()
@@ -243,7 +317,8 @@ public class SendScheduleServiceImpl implements SendScheduleService {
         logger.info("Converted {} MasterScheduleTask entities to ScheduleTaskDTOs for MasterScheduleDay ID: {}", taskDTOs.size(), day.getId());
 
         return ScheduleDayDTO.builder()
-                .dayNumber(day.getDayNumber())
+                .dayNumber(farmerDayNumber)
+                .masterDayNumber(day.getDayNumber())
                 .dayTitle(day.getTitle())
                 .dayDescription(day.getDescription())
                 .tasks(taskDTOs)
@@ -287,7 +362,7 @@ public class SendScheduleServiceImpl implements SendScheduleService {
                 .build();
     }
 
-    private ScheduleDayDTO convertFarmerDayToScheduleDay(FarmerScheduleDay day) {
+    private ScheduleDayDTO convertFarmerDayToScheduleDay(FarmerScheduleDay day, Long masterDayNumber) {
         logger.info("Converting FarmerScheduleDay with ID: {} to ScheduleDayDTO", day.getId());
 
         List<ScheduleTaskDTO> tasks = day.getTasks() == null ? List.of() : day.getTasks().stream()
@@ -306,9 +381,38 @@ public class SendScheduleServiceImpl implements SendScheduleService {
         logger.info("Converted {} FarmerScheduleTask entities to ScheduleTaskDTOs for FarmerScheduleDay ID: {}", tasks.size(), day.getId());
         return ScheduleDayDTO.builder()
                 .dayNumber(day.getDayNumber())
+                .masterDayNumber(masterDayNumber)
                 .dayTitle(day.getTitle())
                 .dayDescription(day.getDescription())
                 .tasks(tasks)
                 .build();
+    }
+
+    private Optional<FarmerCropVarietySchedule> getLatestSchedule(Long farmerId, Long farmerCropVarietyId) {
+        return farmerCropVarietyScheduleRepository.findTopByFarmerIdAndFarmerCropVarietyIdOrderByIdDesc(farmerId, farmerCropVarietyId);
+    }
+
+    private long getTotalGapDays(Long farmerId, Long farmerCropVarietyId) {
+        return Optional.ofNullable(farmerScheduleGapRepository.getTotalGapDays(farmerId, farmerCropVarietyId)).orElse(0L);
+    }
+
+    private long resolveLastSentMasterDay(FarmerCropVarietySchedule schedule) {
+        return schedule.getLastSentMasterDay() != null ? schedule.getLastSentMasterDay() : schedule.getLastSentDay();
+    }
+
+    private void validateSendScheduleRequest(SendScheduleRequest request, List<SendScheduleDayRequest> sortedDays, long expectedStartDay) {
+        if (request.getNumberOfDays() != null && request.getNumberOfDays() != sortedDays.size()) {
+            logger.warn("numberOfDays ({}) does not match scheduleDays size ({}) for Farmer ID: {}, FarmerCropVariety ID: {}. Continuing with actual scheduleDays size for master-day progression.",
+                    request.getNumberOfDays(), sortedDays.size(), request.getFarmerId(), request.getFarmerCropVarietyId());
+        }
+
+//        long expectedDayNumber = expectedStartDay;
+//        for (SendScheduleDayRequest dayRequest : sortedDays) {
+//            logger.info("Day number = {} and expectedDayNumber = {}",dayRequest.getDayNumber(), expectedDayNumber);
+//            if (!Objects.equals(dayRequest.getDayNumber(), expectedDayNumber)) {
+//                throw new VPException("Schedule days must be contiguous and start from farmer day " + expectedStartDay, 400);
+//            }
+//            expectedDayNumber++;
+//        }
     }
 }
